Attempting to fix parallax on mobile.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -151,3 +151,15 @@ section.quote h2 {
         padding-bottom: 23px;
     }
 }
+
+.fixed-bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: url(/images/Atlanta_Skyline.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
+}
